--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -35,7 +35,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	</security-constraint>
 
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>Landing.groovy</welcome-file>
 	</welcome-file-list>
 
 </web-app>
