--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -34,8 +34,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		</auth-constraint>
 	</security-constraint>
 
-	<welcome-file-list>
-		<welcome-file>Landing.groovy</welcome-file>
-	</welcome-file-list>
+	<!-- Security -->
+	<security-constraint>
+		<web-resource-collection>
+			<url-pattern>/invoice/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
 
 </web-app>
