Added context intitialiser

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 
+	<!-- Listeners -->
+	<listener>
+		<listener-class>com.cghsystems.servlet.ServletContextListener</listener-class>
+	</listener>
+
 	<!-- Groovy Servlet Configuration -->
 	<servlet>
 		<servlet-name>Groovy</servlet-name>
