--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,3 +1,5 @@
-#Sun Feb 14 14:48:56 GMT 2010
+#Thu Jun 03 20:45:24 BST 2010
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
+warSrcDir=war
+warSrcDirIsOutput=true
