--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -42,7 +42,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	<!-- Security -->
 	<security-constraint>
 		<web-resource-collection>
-			<url-pattern>/invoice/*</url-pattern>
+			<url-pattern>/admin/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>admin</role-name>
